--- a/app/user-info/user-info.template.html
+++ b/app/user-info/user-info.template.html
@@ -1,3 +1,3 @@
 <div class="panel-body bg-success">
-	Welcome, <span class="user-name">{{$ctrl.user}}</span>
+	Welcome, <span class="user-name">{{$ctrl.user.name}}</span>
 </div>
