updated app to component design and removed routes

--- a/app/lobby/lobby.template.html
+++ b/app/lobby/lobby.template.html
@@ -1,3 +1,6 @@
+<div class="jumbotron" >
+	<p>Welcome to the planning poker app. Join a room from the below list or create a room with a 4 digit PIN so your team can join.</p>
+</div>
 <div class="container">
 	<button ng-click="lobbyCtrl.create()">Create a room</button>
 </div>
