--- a/app/planning-table/planning-table.template.html
+++ b/app/planning-table/planning-table.template.html
@@ -1,9 +1,9 @@
 <div class="panel-heading">
-	Topic/User story <span ng-if="$ctrl.topicEnabled" class="topic-info">{{$ctrl.topic.name}}</span></div>
+	Topic/User story <span ng-if="$ctrl.topic" class="topic-info">{{$ctrl.topic}}</span></div>
 <div class="panel-body">
-	<div ng-if="$ctrl.topicEnabled" class="row">
-		<div class="col-sm-2 participant-points" ng-if="!participant.isHost" ng-repeat="participant in $ctrl.participants">
-			<p>{{participant.user_name}}</p>
+	<div ng-if="$ctrl.topic" class="row">
+		<div class="col-sm-2 participant-points" ng-if="!(participant.isHost || participant.isChicken)" ng-repeat="participant in $ctrl.participants">
+			<p>{{participant.name}}</p>
 			<div class="card" ng-class="{'points-received': participant.points}">
 				<span class="points" ng-class="{'show-points': $ctrl.showPoints}">
 					{{participant.points}}
