completed send points, reset topic, reveal points and disconnect

--- a/app/planning-room/planning-room.template.html
+++ b/app/planning-room/planning-room.template.html
@@ -9,14 +9,20 @@
 	<div class="row">
 		<div class="col-sm-8">
 			<div class="panel panel-default">
-				<planning-table topic="planningRoomCtrl.topic" 
+				<planning-table topic="planningRoomCtrl.topic"
+								topic-inprogress="planningRoomCtrl.topicInprogress" 
 								is-host="planningRoomCtrl.user.isHost" 
-								participants="planningRoomCtrl.participants"
+								participants="planningRoomCtrl.participantUsers"
 								show-points="planningRoomCtrl.showPoints"></planning-table>
 			</div>
 			<div class="panel panel-default">
-				<participant-panel ng-if="!planningRoomCtrl.user.isHost" topic="planningRoomCtrl.topic" pointing-enabled="planningRoomCtrl.pointingEnabled"></participant-panel>
-				<host-panel ng-if="planningRoomCtrl.user.isHost" topic="planningRoomCtrl.topic"></host-panel>
+				<participant-panel ng-if="!planningRoomCtrl.user.isHost" 
+								   topic="planningRoomCtrl.topic" 
+								   pointing-enabled="planningRoomCtrl.pointingEnabled"
+								   user="planningRoomCtrl.user">
+				</participant-panel>
+				<host-panel ng-if="planningRoomCtrl.user.isHost">
+				</host-panel>
 			</div>
 		</div>
 		<div class="col-sm-4">
