--- a/app/planning-table/planning-table.template.html
+++ b/app/planning-table/planning-table.template.html
@@ -1,8 +1,8 @@
 <div class="panel-heading">
-	Topic/User story <span ng-if="$ctrl.topic" class="topic-info">{{$ctrl.topic}}</span></div>
+	Topic/User story <span ng-if="$ctrl.topicInprogress" class="topic-info">{{$ctrl.topic}}</span></div>
 <div class="panel-body">
-	<div ng-if="$ctrl.topic" class="row">
-		<div class="col-sm-2 participant-points" ng-if="!(participant.isHost || participant.isChicken)" ng-repeat="participant in $ctrl.participants">
+	<div ng-if="$ctrl.topicInprogress" class="row">
+		<div class="col-sm-2 participant-points" ng-repeat="participant in $ctrl.participants">
 			<p>{{participant.name}}</p>
 			<div class="card" ng-class="{'points-received': participant.points}">
 				<span class="points" ng-class="{'show-points': $ctrl.showPoints}">
@@ -11,7 +11,7 @@
 			</div>
 		</div>
 	</div>
-	<div ng-if="!$ctrl.topicEnabled">
+	<div ng-if="!$ctrl.topicInprogress">
 		<p>This zone is the pointing table. When a scrum master selects the story/topic, then all the participants and the process
 			of pointing will be shown here. The below notation of the cards (sample) tells us whether is participant is pointed or
 			not.
