--- a/app/lobby/lobby.template.html
+++ b/app/lobby/lobby.template.html
@@ -6,9 +6,9 @@
 </div>
 <div class="contrainer" ng-if="lobbyCtrl.rooms.length">
 	<h3>Existing rooms:</h3>
-	<ul>
-		<li ng-repeat="room in lobbyCtrl.rooms">
-			{{room | json}}<a href ng-click="lobbyCtrl.join(room)"> Join this meeting</a>
+	<ul class="planning-rooms">
+		<li ng-repeat="room in lobbyCtrl.rooms" ng-click="lobbyCtrl.join(room)">
+			{{room.name | uppercase}}
 		</li>
 	</ul>
 </div>
