Updated with typescript code

--- a/app/planning-room/planning-room.template.html
+++ b/app/planning-room/planning-room.template.html
@@ -9,10 +9,8 @@
 	<div class="row">
 		<div class="col-sm-8">
 			<div class="panel panel-default">
-				<planning-table topic="planningRoomCtrl.topic"
-								topic-inprogress="planningRoomCtrl.topicInprogress" 
+				<planning-table topic-inprogress="planningRoomCtrl.topicInprogress" 
 								is-host="planningRoomCtrl.user.isHost" 
-								participants="planningRoomCtrl.participantUsers"
 								show-points="planningRoomCtrl.showPoints"></planning-table>
 			</div>
 			<div class="panel panel-default">
