--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -9,6 +9,9 @@
 		<div class="alert alert-danger" ng-show="loginCtrl.invalidAccessCode">
 				<strong>Invalid access code!</strong> Please enter a valid access code, ask your Scrum master for details.
 		</div>
+		<div class="alert alert-danger" ng-show="loginCtrl.invalidUserName">
+			<strong>Invalid user name!</strong> User name already exists, please enter a unique and different user name.
+		</div>
 		<div class="form-group">
 			<input type="text" class="form-control" ng-model="loginCtrl.userName" placeholder="Enter your name" focus="true" />
 		</div>
@@ -21,11 +24,11 @@
 					<input class="form-check-input" type="checkbox" ng-model="loginCtrl.isHost"> I'm scrum master
 				</label>
 			</div>
-			<div class="form-check form-check-inline">
+			<!-- <div class="form-check form-check-inline">
 				<label class="form-check-label">
 					<input class="form-check-input" type="checkbox" ng-model="loginCtrl.isChicken"> I'm just listening (Chiken)
 				</label>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<div class="modal-footer">
