--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 	<link href="assets/angular-ui-bootstrap/ui-bootstrap-csp.css">
 	<link rel="stylesheet" href="assets/css/app.css">
 
-	<script>
-		// function closeIt() {
-		// 	return "Are you sure you want to leave the planning? (This action will disconnect you from planning)";
-		// }
-		// window.onbeforeunload = closeIt;
-	</script>
 	<script src="assets/js/angular.min.js"></script>
+	
 </head>
 
 <body>
@@ -59,6 +54,7 @@
 
 	<!-- Application constants -->
 	<script src="app/constants/socketio.constants.js"></script>
+	<script src="app/constants/app.constants.js"></script>
 
 	<!-- Directives -->
 	<script src="app/directives/focusme.directive.js"></script>
