--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					   joined-planning="appCtrl.joinedPlanning"
 					   user="appCtrl.user" 
 					   room="appCtrl.room"
+					   topic-inprogress="appCtrl.topicInprogress"
 					   participants="appCtrl.participants"></planning-room>
 	</div>
 	<!-- vendor scripts -->
