updated layout and styles for lobby

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-primary" style="border-radius: 0px;">
-		<span class="navbar-brand">Sprint planning</span>
+		<span class="navbar-brand">Agile planning</span>
 	</nav>
 	<div ng-controller="AppController as appCtrl">
 		<lobby ng-if="!(appCtrl.joinedPlanning && appCtrl.room)" 
