--- a/app/lobby/lobby.template.html
+++ b/app/lobby/lobby.template.html
@@ -1,14 +1,21 @@
-<div class="jumbotron" >
-	<p>Welcome to the planning poker app. Join a room from the below list or create a room with a 4 digit PIN so your team can join.</p>
+<div class="app-intro">
+		<h3 style="display: inline-block">Welcome to Agile Planning Poker application.<br><br>
+			<small>If you are the host, create a room for your planning. If you are a participant, go ahead and join the room with the access code.<br>
+				**If you are a participant and don't know your room details, please contact your host.
+			</small>
+		</h3>
+		<br><br>
+		<button class="btn btn-primary btn-createroom" ng-click="lobbyCtrl.create()">Create a room</button>
 </div>
-<div class="container">
-	<button ng-click="lobbyCtrl.create()">Create a room</button>
-</div>
-<div class="contrainer" ng-if="lobbyCtrl.rooms.length">
-	<h3>Existing rooms:</h3>
-	<ul class="planning-rooms">
-		<li ng-repeat="room in lobbyCtrl.rooms" ng-click="lobbyCtrl.join(room)">
-			{{room.name | uppercase}}
-		</li>
-	</ul>
+<div class="contrainer rooms">
+	<h3>Rooms</h3>
+	<div class="list-group existing-rooms"  ng-if="lobbyCtrl.rooms.length">
+		<a href class="list-group-item" ng-repeat="room in lobbyCtrl.rooms" ng-click="lobbyCtrl.join(room)">
+			<h3>{{room.name}}</h3>
+			<p><strong>Host</strong> Michael Cohen<br><strong>Date</strong> Tuesday November 1, 2017</p>
+		</a>
+	</div>
+	<p  ng-if="lobbyCtrl.rooms.length === 0">
+		<i>No rooms available for planning</i>
+	</p>
 </div>
