Updated title of application

--- a/app/lobby/lobby.template.html
+++ b/app/lobby/lobby.template.html
@@ -1,5 +1,5 @@
 <div class="app-intro">
-		<h3 style="display: inline-block">Welcome to Agile Planning Poker application.<br><br>
+		<h3 style="display: inline-block">Welcome to Sprint Planning Poker application.<br><br>
 			<small>If you are the host, create a room for your planning. If you are a participant, go ahead and join the room with the access code.<br>
 				**If you are a participant and don't know your room details, please contact your host.
 			</small>
