--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 
 <head>
-	<title>Scrum planning</title>
+	<title>Sprint Planning</title>
 
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 	<link href="assets/css/toastr.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <body>
 	<nav class="navbar navbar-dark bg-primary" style="border-radius: 0px;">
-		<span class="navbar-brand">Agile planning</span>
+		<span class="navbar-brand">Sprint planning</span>
 	</nav>
 	<div ng-controller="AppController as appCtrl">
 		<lobby ng-if="!(appCtrl.joinedPlanning && appCtrl.room)" 
